@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.filmibynaturex" name="Filmi BY NATURE"
-	version="2.5.0" provider-name="AJ">
+	version="2.5.1" provider-name="AJ">
 	<requires>
 		<import addon="xbmc.python" version="2.0" />
 		<import addon="script.module.simplejson" version="2.0.10" />
 		<import addon="script.module.beautifulsoup" version="3.2.0" />
-		<import addon="script.module.turtlex"  version="1.7.6" />
+		<import addon="script.module.turtlex"  version="1.7.8" />
 		<import addon="script.module.metahandler" />
 		<import addon="script.module.requests" />
 	</requires>
