@@ -1,16 +1,16 @@
 '''
-Created on Dec 24, 2011
+Created on Feb 1, 2014
 
 @author: ajju
 '''
+from common import HttpUtils, AddonUtils, Logger
 from common.DataObjects import VideoHostingInfo, VideoInfo, VIDEO_QUAL_SD
-from common import HttpUtils, AddonUtils
 import re
 
 def getVideoHostingInfo():
     video_hosting_info = VideoHostingInfo()
     video_hosting_info.set_video_hosting_image('')
-    video_hosting_info.set_video_hosting_name('HostingCup')
+    video_hosting_info.set_video_hosting_name('Movzap')
     return video_hosting_info
     
 def retrieveVideoInfo(video_id):
@@ -19,7 +19,7 @@ def retrieveVideoInfo(video_id):
     video_info.set_video_hosting_info(getVideoHostingInfo())
     video_info.set_video_id(video_id)
     try:
-        video_info_link = 'http://www.vidpe.com/' + str(video_id)
+        video_info_link = 'http://movzap.com/' + str(video_id)
         html = HttpUtils.HttpClient().getHtmlContent(url=video_info_link)
         
         paramSet = re.compile("return p\}\(\'(.+?)\',(\d\d),(\d\d),\'(.+?)\'").findall(html)
@@ -32,10 +32,10 @@ def retrieveVideoInfo(video_id):
             video_link = re.compile(r"file:\'(.+?)\'").findall(video_info_link)[0]
         else:
             video_link = re.compile("'file': '(.+?)'").findall(html)[0]
-        
         video_info.set_video_stopped(False)
         video_info.add_video_link(VIDEO_QUAL_SD, video_link)
         
-    except: 
+    except Exception, e:
+        Logger.logError(e)
         video_info.set_video_stopped(True)
     return video_info
